--- a/src/pages/frontpage.css
+++ b/src/pages/frontpage.css
@@ -26,6 +26,21 @@
 .mediaCard {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.searchResults {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.searchBar {
+    width: 500px;
+    height: 7.5vh;
+    font-size: 20px;
+    margin-top: 40px;
 }
