--- a/src/pages/frontpage.css
+++ b/src/pages/frontpage.css
@@ -28,13 +28,14 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    width: 100%;
 }
 
 .searchResults {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width: 100%;
 }
 
