--- a/src/pages/series250.css
+++ b/src/pages/series250.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     padding: 10px;
     margin: 5px;
-    justify-content: space-between;
+    justify-content: center;
     font-weight: 600;
     color: darkred;
     align-items: center;
@@ -12,6 +12,7 @@
 
 .seriesContainer {
     display: flex;
-    flex-direction: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
 }
