--- a/src/pages/series250.css
+++ b/src/pages/series250.css
@@ -11,6 +11,7 @@
     }
 
 .seriesContainer {
+    margin-top: 10vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
