--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   background: darkred;
 }
