--- a/src/pages/frontpage.css
+++ b/src/pages/frontpage.css
@@ -2,26 +2,10 @@
     width: 100%;
     height: 100vh;
     background-color: white;
+    margin-top: 10vh;
 }
 
-.navBar {
-    width: 100%;
-    height: 10vh;
-    background-color: darkred;
-    align-items: center;
-    justify-content: right;
-    display: flex;
-    color: white;
-    text-decoration: none;
-}
 
-.navItem {
-    color: white;
-    text-decoration: none;
-    margin: 30px;
-    font-weight: 700;
-    font-size: 30px;
-}
 
 .mediaCard {
     display: flex;
