--- a/src/pages/movies250.css
+++ b/src/pages/movies250.css
@@ -11,7 +11,9 @@ align-items: center;
 }
 
 .movieContainer {
+    margin-top: 10vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
